@@ -1,7 +1,8 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.ActiveProfiles;
@@ -11,11 +12,15 @@ import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.Judge;
 import uk.gov.hmcts.reform.fpl.model.common.JudgeAndLegalAdvisor;
 
+import java.util.List;
 import java.util.Map;
 
 import static java.lang.Long.parseLong;
 import static org.assertj.core.api.Assertions.assertThat;
+import static uk.gov.hmcts.reform.fpl.enums.GeneratedOrderType.BLANK_ORDER;
 import static uk.gov.hmcts.reform.fpl.enums.JudgeOrMagistrateTitle.HIS_HONOUR_JUDGE;
+import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.testChild;
+import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.testChildren;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(GeneratedOrderController.class)
@@ -23,6 +28,9 @@ import static uk.gov.hmcts.reform.fpl.enums.JudgeOrMagistrateTitle.HIS_HONOUR_JU
 public class GeneratedOrderControllerAboutToStartTest extends AbstractControllerTest {
 
     private static final String CASE_ID = "12345";
+    private static final String FAMILY_MAN_CASE_NUMBER_KEY = "familyManCaseNumber";
+    private static final String CHILDREN_KEY = "children1";
+    private static final String FAMILY_MAN_CASE_NUMBER_VALUE = "123";
 
     GeneratedOrderControllerAboutToStartTest() {
         super("create-order");
@@ -41,10 +49,10 @@ public class GeneratedOrderControllerAboutToStartTest extends AbstractController
     }
 
     @Test
-    void aboutToStartShouldSetDateOfIssueAsTodayByDefault() {
+    void shouldSetDateOfIssueAsTodayByDefault() {
         CaseDetails caseDetails = CaseDetails.builder()
             .id(parseLong(CASE_ID))
-            .data(Map.of("familyManCaseNumber", "123"))
+            .data(Map.of(FAMILY_MAN_CASE_NUMBER_KEY, FAMILY_MAN_CASE_NUMBER_VALUE))
             .build();
 
         AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
@@ -54,9 +62,34 @@ public class GeneratedOrderControllerAboutToStartTest extends AbstractController
     }
 
     @Test
-    void aboutToStartShouldSetAssignJudgeLabelWhenAllocatedJudgeIsPopulated() {
+    void shouldSetPageShowFlagToNoWhenOnlyOneChildOnCase() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .data(ImmutableMap.of(
+            .id(parseLong(CASE_ID))
+            .data(Map.of(FAMILY_MAN_CASE_NUMBER_KEY, FAMILY_MAN_CASE_NUMBER_VALUE, CHILDREN_KEY, List.of(testChild())))
+            .build();
+
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
+
+        assertThat(callbackResponse.getData().get("pageShow")).isEqualTo("No");
+    }
+
+    @Test
+    void shouldSetPageShowFlagToYesWhenMultipleChildrenOnCase() {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .id(parseLong(CASE_ID))
+            .data(Map.of(FAMILY_MAN_CASE_NUMBER_KEY, FAMILY_MAN_CASE_NUMBER_VALUE, CHILDREN_KEY, testChildren()))
+            .build();
+
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
+
+        assertThat(callbackResponse.getData().get("pageShow")).isEqualTo("Yes");
+    }
+
+    @Test
+    void shouldSetAssignJudgeLabelWhenAllocatedJudgeIsPopulated() {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of(
+                FAMILY_MAN_CASE_NUMBER_KEY, FAMILY_MAN_CASE_NUMBER_VALUE,
                 "allocatedJudge", Judge.builder()
                     .judgeTitle(HIS_HONOUR_JUDGE)
                     .judgeLastName("Richards")
@@ -73,9 +106,10 @@ public class GeneratedOrderControllerAboutToStartTest extends AbstractController
     }
 
     @Test
-    void aboutToStartShouldNotSetAssignedJudgeLabelIfAllocatedJudgeNotSet() {
+    void shouldNotSetAssignedJudgeLabelIfAllocatedJudgeNotSet() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .data(ImmutableMap.of(
+            .data(Map.of(
+                FAMILY_MAN_CASE_NUMBER_KEY, FAMILY_MAN_CASE_NUMBER_VALUE,
                 "judgeAndLegalAdvisor", JudgeAndLegalAdvisor.builder().build()
             ))
             .build();
@@ -85,5 +119,31 @@ public class GeneratedOrderControllerAboutToStartTest extends AbstractController
         JudgeAndLegalAdvisor judgeAndLegalAdvisor = caseData.getJudgeAndLegalAdvisor();
 
         assertThat(judgeAndLegalAdvisor.getAllocatedJudgeLabel()).isNull();
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"Submitted", "Gatekeeping", "PREPARE-FOR-HEARING"})
+    void shouldNotAutocompleteDocumentTypeWhenStateIsNotClosed(String state) {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of(FAMILY_MAN_CASE_NUMBER_KEY, FAMILY_MAN_CASE_NUMBER_VALUE))
+            .state(state)
+            .build();
+
+        AboutToStartOrSubmitCallbackResponse response = postAboutToStartEvent(caseDetails);
+
+        assertThat(response.getData()).doesNotContainKey("orderTypeAndDocument");
+    }
+
+    @Test
+    void shouldAutocompleteDocumentTypeWithC21WhenStateIsClosed() {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of(FAMILY_MAN_CASE_NUMBER_KEY, FAMILY_MAN_CASE_NUMBER_VALUE))
+            .state("CLOSED")
+            .build();
+
+        AboutToStartOrSubmitCallbackResponse response = postAboutToStartEvent(caseDetails);
+        CaseData caseData = mapper.convertValue(response.getData(), CaseData.class);
+
+        assertThat(caseData.getOrderTypeAndDocument().getType()).isEqualTo(BLANK_ORDER);
     }
 }
